@startuml

title __BRIDGE's Class Diagram__\n

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.bridge {
        class com.designpatterns.java.structural.bridge.BridgePatternDemo {
            {static} + main()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.bridge {
        class com.designpatterns.java.structural.bridge.JavaQuestions {
            - current : int
            - questions : List<String>
            + JavaQuestions()
            + deleteQuestion()
            + displayAllQuestions()
            + displayQuestion()
            + newQuestion()
            + nextQuestion()
            + previousQuestion()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.bridge {
        interface com.designpatterns.java.structural.bridge.Question {
            {abstract} + deleteQuestion()
            {abstract} + displayAllQuestions()
            {abstract} + displayQuestion()
            {abstract} + newQuestion()
            {abstract} + nextQuestion()
            {abstract} + previousQuestion()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.bridge {
        class com.designpatterns.java.structural.bridge.QuestionFormat {
            + QuestionFormat()
            + displayAll()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.bridge {
        class com.designpatterns.java.structural.bridge.QuestionManager {
            + catalog : String
            + QuestionManager()
            + delete()
            + display()
            + displayAll()
            + newOne()
            + next()
            + previous()
        }
      }
    }
  }
  

  com.designpatterns.java.structural.bridge.JavaQuestions .up.|> com.designpatterns.java.structural.bridge.Question
  com.designpatterns.java.structural.bridge.QuestionFormat -up-|> com.designpatterns.java.structural.bridge.QuestionManager
  com.designpatterns.java.structural.bridge.QuestionManager o-- com.designpatterns.java.structural.bridge.Question : q


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
